# LiveMusicApp

./: .cproject  .gitignore  .project  AUTHORS  AlsaUtils.c  AlsaUtils.h  Chorder.c  Connections.c  Connections.h  CopyToEffects  DefPrefs.h  GTKMidiNotes.txt  GTKMidiUI.c  GTKMidiUI.glade  GTKMidiUI.h  GenPrefs.h  GuitarEffects  HTML.c  HTML.h  KeepLiveMusicRunning.sh  LiveMusic.mk  LiveMusic.project  LiveMusic.txt  LiveMusic.xml  Makefile  Makefile.am  Makefile.in  MyWidgets.c  MyWidgets.h  Notes.txt  Player.c  Player.h  PrefsFile.c  PrefsFile.h  PrefsGui.c  PrefsGui.h  README  RightMenuClick.c  SooperOSC.c  SooperOSC.h  (+10 more)
ChartFixer/: ChartFixer.c  ChartFixer.h  Makefile.am  makefile
Debug/: GTKMidiUI.glade  LiveMusic.xml
DefaultSongs/: index.html
DefaultSongs/BlueRondo/: BlueRondo.gpx  BlueRondo.html  BlueRondo.mid  BlueRondo.mscz  BlueRondo.slsess
Documentation/: LiveMusicApplication.odt
LiveMusicRes/: GTKMidiUI.glade  LiveMusic.xml  LiveMusicApp.css  LiveMusicApp.glade  LiveMusicApp.glade.1  LiveMusicApp.glade.2
LiveMusicRes/Prefs/: .patchagerc  Elias20141129.colors  Elias20150312.qtcurve  EliasBankNew.rkrb  EliasMidiTable.rmt  Qsynth.conf  RakSkin.rkrs  SLMidi.slb
MySongs/: index.html
MySongs/BlueRondo/: BlueRondo.html  BlueRondo.tg
Prefs/: GuitarixSettings.notes  Log.ods  Qsynth.conf  hydrogen.conf  jack-plumbing
Prefs/guitarix/: gx_head-01_rc  gx_head_rc  ladspa_defs.js  musical-artifacts.js  specmatch.js  ui_rc
Prefs/guitarix/banks/: EliasBank.gx  banklist.js
Prefs/guitarix/skins/: gx_head_Elias.rc
Scripts/: AutoGenTools  AutoGenTools.sh  AutoStartLiveMusic.sh  AutoToolsClean  AutoToolsClean.sh  CarlaConnect.sh  CarlaPresets.py  CarlaSwitcher.py  ChangeVersion.sh  CheckForSolo.sh  ChordsFromXML.py  CopyToEffects  CreateIndexFromCSV.sh  DebugRunConnect.sh  DirectoryToHtml.py  EffectsConnect.sh  GetIndexFromPDF.sh  GuitarEffects  IncBuildNumber.sh  JSONtoCVS.py  KeepLiveMusicRunning.sh  LiveController.sh  LiveMusicCharts.py  LiveMusicReplacePDF.py  LiveTest.sh  MakeDeb.sh  MeasureCount.py  Metronome.py  MusicApps.sh  NewLearn.sh  Novation.py  OCRMusicBooksIndex.py  PipeConnect.sh  PrintSetList.sh  ReIndex.sh  ReIndexAll.sh  ReIndexAuto.sh  RealBookMerge.sh  RecordMulti.sh  ReplacePatch.sh  (+4 more)
debian/: changelog  control  copyright  rules
src/: APlayMidi.c  APlayMidi.h  AlsaUtils.c  AlsaUtils.h  Chorder.c  Connections.c  Connections.h  DefPrefs.h  GTKMidiUI.c  GTKMidiUI.h  GenPrefs.h  HIDGrab.c  HTML.c  HTML.h  LiveMusicApp.c  LiveMusicApp.h  Makefile.am  Makefile.in  MyWidgets.c  MyWidgets.h  Player.c  Player.h  PrefsFile.c  PrefsFile.h  PrefsGui.c  PrefsGui.h  RightMenuClick.c  SooperOSC.c  SooperOSC.h  Timers.c  Timers.h  aconfig.h  config.h.in  transport.c  version.h.in  wmctrl.c
