bin_PROGRAMS = livemusicapp

livemusicapp_SOURCES = AlsaUtils.c \
HTML.c \
PrefsFile.c \
Timers.c \
Chorder.c \
LiveMusicApp.c \
PrefsGui.c \
transport.c \
Connections.c \
MyWidgets.c \
RightMenuClick.c \
wmctrl.c \
HIDGrab.c \
Player.c \
SooperOSC.c \
aconfig.h \
DefPrefs.h \
LiveMusicApp.h \
PrefsFile.h \
Timers.h \
AlsaUtils.h \
GenPrefs.h \
MyWidgets.h \
PrefsGui.h \
Connections.h \
HTML.h \
Player.h \
SooperOSC.h
